--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -186,8 +186,8 @@
 .landing-intro h1 {
   margin: 0;
   letter-spacing: 2px;
-  font-size: 24px;
-  line-height: 26px;
+  font-size: 20px;
+  line-height: 24px;
   font-weight: 500;
   font-family: "Geist", sans-serif;
 }
@@ -219,11 +219,12 @@
   margin-left: 20px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 20px;
+  line-height: 24px;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
+  white-space: nowrap;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
@@ -235,13 +236,14 @@
 
 h2.landing-info-h2 {
   color: #c481ff;
-  font-size: 32px;
+  font-size: 26px;
   width: 120%;
   margin: 0;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   position: relative;
   margin-left: -5px;
+  white-space: nowrap;
 }
 
 .landing-h2-2 {
